--- a/week5-materials/nav.html
+++ b/week5-materials/nav.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* .nav-old {
+        .nav-old {
             background: #f8f9fa;
             padding: 1rem;
             overflow: hidden;
@@ -31,9 +31,9 @@
   content: "";
   display: table;
   clear: both;
-} */
+}
 
-/* .nav-flex {
+ .nav-flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -47,7 +47,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-} */
+}
 
 
     </style>
