--- a/week5-materials/cards.html
+++ b/week5-materials/cards.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-      /*  .card-container {
+       .card-container {
   display: flex;
   flex-wrap: wrap;           /* ← Allows cards to wrap to new rows */
-  /*gap: 1.5rem;              /* ← Consistent spacing between cards */
-  /*padding: 2rem;
+  gap: 1.5rem;              /* ← Consistent spacing between cards */
+  padding: 2rem;
   background: #f8f9fa;
-} */
+}
 
-/* .card {
+.card {
   flex: 1 1 300px;          /* ← grow | shrink | basis (min-width) */
-  /* background: white;
+  background: white;
   border-radius: 8px;
   padding: 1.5rem;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -30,7 +30,7 @@
   margin-bottom: 0;
   color: #666;
   line-height: 1.5;
-} */
+}
     </style>
 </head>
 <body>
